Fix spacing according to designs.

--- a/assets/sass/components/setup/_googlesitekit-setup.scss
+++ b/assets/sass/components/setup/_googlesitekit-setup.scss
@@ -81,7 +81,7 @@
 		.googlesitekit-setup__step-hint {
 			display: flex;
 			gap: 4px;
-			margin: 12px 0;
+			margin: 13px 0 12px;
 			padding: 0 8px;
 
 			p {
